data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_268.wast
;; 9. **Test Description: Insert `nop` in an infinite loop using multiple nested control structures (`block`, `loop`, `br_if`).**    - **Reasoning**: Confirm that `nop` does not interfere with nested control structures.    - **Check**: Proper control flow should be maintained without infinite execution.

(assert_invalid
  (module
    (func (block (loop (block (nop) (br_if 0 (i32.const 0))))))
  )
  "unreachable code"
)